Added actions menu, reformatted whole page, other changes

--- a/discord-theme.css
+++ b/discord-theme.css
@@ -14,16 +14,12 @@ img { max-width: 100%; }
 *, *::after, *::before { box-sizing: border-box; }
 a { color: var(--link); text-decoration: none; }
 a:hover { text-decoration: underline; }
-/* Actual styling */
 body {
 	font-family: {font:Body font}, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: {text:Font size};
-	display: grid;
-	grid-template-columns: auto 15em 1fr;
-	grid-template-rows: 100vh;
 	background-color: var(--bg-standard);
 	color: var(--text-normal);
-	overflow: hidden;
+	overflow: hidden scroll;
 	--banner-header: {color:Title if header is showing};
 	--discord-blue: {color:Discord logo};
 	--green: {color:Servers navbar};
@@ -63,15 +59,26 @@ body.light {
 	--paginate: #ebedef;
 }
 body.dark strong, body.dark b { color: {color:Dark mode bold}; }
-body.light strong, body.light b { color: {color:Light mode italics}; }
-body.dark em, body.dark i { color: {color:Dark mode bold}; }
+body.light strong, body.light b { color: {color:Light mode bold}; }
+body.dark em, body.dark i { color: {color:Dark mode italics}; }
 body.light em, body.light i { color: {color:Light mode italics}; }
+
+
+#servers,
+#pagehead,
+#sidebar,
+#navigate {
+	position: fixed;
+}
 #servers {
 	background-color: var(--bg-dark);
 	padding: 0.25em 0 0.5em;
 	overflow: hidden scroll;
 	-ms-overflow-style: none;  /* IE and Edge */
 	scrollbar-width: none;  /* Firefox */
+	left: 0;
+	top: 0;
+	height: 100%;
 }
 #servers::-webkit-scrollbar {
 	display: none;
@@ -159,6 +166,10 @@ body.light em, body.light i { color: {color:Light mode italics}; }
 }
 
 #sidebar {
+	height: 100%;
+	width: 15em;
+	top: 0;
+	margin-left: 4.5em;
 	background-color: var(--sidebar);
 	display: grid;
 	grid-template-rows: auto 1fr auto;
@@ -167,7 +178,7 @@ body.light em, body.light i { color: {color:Light mode italics}; }
 .middle, #channels, #channels a span,
 .blogname div, .blogname div *,
 .pagename, .pagename h2,
-#navigate > p {
+#navigate div > p {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -262,22 +273,24 @@ img.square { border-radius: 0.15em; }
 	font-size: 0.75em;
 }
 
-main {
-	display: grid;
-	grid-template-rows: 3em 1fr 4em;
-}
 .pagename, .icons, .icons a {
 	display: flex;
 	align-items: center;
 }
-main header {
+#pagehead {
+	background-color: var(--bg-standard);
+	z-index: 5;
+	height: 3em;
+	width: calc(100% - var(--left));
+	padding: 0 1em;
+	margin-left: var(--left);
+	top: 0;
 	display: grid;
 	grid-template-columns: 1fr auto;
 	column-gap: 1em; /* To make space for the tumblr controls */
 	align-items: center;
 	justify-content: space-between;
 	box-shadow: var(--bg-dark) 0 1px 1px;
-	padding: 0 1em;
 }
 .pagename { position: relative; }
 .pagename::after {
@@ -292,6 +305,7 @@ main header {
 }
 .pagename h2 { color: var(--header); font-weight: 600; text-transform: lowercase }
 .pagename svg { color: var(--text-muted); margin-right: 0.5em; flex-shrink: 0;}
+.pagename .tag::before, .pagename .tag::after, .pagename .search_query::before, .pagename .search_query::after { content: '"' ; }
 .tmblr-iframe {
 	z-index: 999999999!important;
 	margin-top: 3em;
@@ -327,17 +341,25 @@ body.controls-click .tmblr-iframe {
 	color: var(--text-muted);
 }
 #navigate {
-	background-color: var(--paginate);
+	width: calc(100% - var(--left));
+	bottom: 0;
+	left: var(--left);
+	background-color: var(--bg-standard);
+	z-index: 5;
+}
+#navigate > div {
+	height: 2.75em;
+	padding: 0 1em;
 	margin: 0 1em 1.5em;
 	border-radius: 0.5em;
+	background-color: var(--paginate);
 	color: var(--secondary);
 	display: grid;
 	grid-template-columns: auto 1fr auto;
 	column-gap: 0.5em;
 	align-items: center;
-	padding: 0 1em;
 }
-#navigate > p { color: var(--text-muted); }
+#navigate > div > p { color: var(--text-muted); }
 #navigate .paginate {
 	display: flex;
 	align-items: center;
@@ -346,13 +368,13 @@ body.controls-click .tmblr-iframe {
 .paginate a:hover { filter: drop-shadow(0 0 0.25em var(--link)); }
 .paginate .prev {
 	-webkit-transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-            transform: rotate(90deg);
+		-ms-transform: rotate(90deg);
+			transform: rotate(90deg);
 }
 .paginate .next {
 	-webkit-transform: rotate(-90deg);
-        -ms-transform: rotate(-90deg);
-            transform: rotate(-90deg);
+		-ms-transform: rotate(-90deg);
+			transform: rotate(-90deg);
 	padding-left: 0.6em;
 }
 .paginate p {
@@ -364,47 +386,51 @@ body.controls-click .tmblr-iframe {
 	margin: 0 0.25em;
 }
 
-#allposts {
-	overflow: hidden scroll;
-	padding: 2em 1em;
-}
+#allposts { padding: 0.25em 0 1em; margin: 3em 0 4em var(--left); }
+.post { padding: 0.5em 1em 0; margin: 0.5em 0; position: relative; }
+#allposts > p { padding: 0 1em; margin: 1em 0; }
+.post .body p { margin: 0.25em 0 0.5em; }
+.post .body p:first-child { margin-top: 0; }
+body.dark .post:hover, body.dark .post:hover .timestamp .date { background: #32353b; }
+body.light .post:hover, body.light .post:hover .timestamp .date { background: #fafafa; }
 .timestamp {
-    color: #ed4245;
-    font-weight: 600;
-    font-size: 0.75em;
-    text-align: center;
-    position: relative;
-    padding-bottom: 0.5em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	font-weight: 600;
+	font-size: 0.75em;
+	text-align: center;
+	position: relative;
+	padding: 0.25em 0 0.5em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .timestamp::before {
-    content: "";
-    display: block;
-    width: 100%;
-    border-top: thin solid #ed4245;
-    position: absolute;
-    top: 0.75em;
+	content: "";
+	display: block;
+	width: 100%;
+	border-top: thin solid {color:Timestamps and post divider};
+	position: absolute;
+	top: 1em;
 }
 .timestamp .date {
-    background-color: var(--bg-standard);
-    position: relative;
-    z-index: 1;
-    padding: 0.125em 0.25em;
+	color: {color:Timestamps and post divider};
+	background-color: var(--bg-standard);
+	position: relative;
+	z-index: 1;
+	padding: 0.125em 0.25em;
 }
 .timestamp .datelink {
-    color: #fff;
-    position: absolute;
-    right: 0;
-    display: flex;
-    cursor: pointer;
-    text-transform: uppercase;
+	color: {color:Post divider More link};
+	position: absolute;
+	right: 0;
+	top: 0.25em;
+	display: flex;
+	cursor: pointer;
+	text-transform: uppercase;
 }
 .timestamp .datelink span {
-    background: #ed4245;
-    padding: 0.125em 0.375em 0.125em 0;
-    border-radius: 0 0.25em 0.25em 0;
+	background: {color:Timestamps and post divider};
+	padding: 0.125em 0.375em 0.125em 0;
+	border-radius: 0 0.25em 0.25em 0;
 }
 .pinned {
 	display: grid;
@@ -414,13 +440,80 @@ body.controls-click .tmblr-iframe {
 }
 .pinned svg { color: var(--secondary); justify-self: center; }
 .pinned p { color: var(--channels); }
+.post .username {
+	font-weight: 500;
+	color: var(--header);
+}
+.post .body { margin-top: 0.125em; }
+.post .rb {
+	display: grid;
+	grid-template-columns: 2.5em 1fr;
+	column-gap: 1em;
+	padding: 0.5em 0;
+	margin: 0.5em 0;
+}
+.tag-wrapper { padding-bottom: 0.5em; margin-left: 3.5em; }
+.tag-wrapper .tag {
+	border: 1px solid transparent;
+	border-radius: 0.5em;
+	display: inline-flex;
+	column-gap: 0.375em;
+	align-items: first baseline;
+	padding: 0.25em 0.375em;
+	margin: 0 0.25em 0.25em 0;
+	background-color: var(--sidebar);
+	color: var(--secondary);
+}
+.tag-wrapper .tag:hover { text-decoration: none; background-color: var(--bg-standard); border-color: #fff3; }
+.tag-wrapper .tag svg { flex-shrink: 0; padding-top: 0.125em;}
+#customlike { position: relative; }
+#customlike .like_button .like_toggle {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0
+}
+.post .actions {
+	background-color: var(--bg-standard);
+	display: inline-flex;
+	border-radius: 0.25em;
+	box-shadow: 0 0 0.125em var(--blogname), 0 0.25em 0.25em var(--blogname);
+	overflow: hidden;
+	position: absolute;
+	bottom: -0.5em;
+	right: 1em;
+	z-index: 1;
+}
+.post:not(:hover) .actions {
+	opacity: 0;
+	pointer-events: none;
+}
+.post .actions a, .post .actions .notecount { height: 32px; padding: 6px; color: var(--secondary) }
+.post .actions a { width: 32px; }
+.post .actions a:hover { background: var(--channels-hover); }
+#customlike .like_button.liked ~ svg { color: #ed4245; }
+
+blockquote { padding: 0 0.5em 0.125em 0.875em; position: relative; }
+blockquote::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	height: 100%;
+	border: 0.125em solid;
+	opacity: 0.25;
+	border-radius: 0.25em;
+}
 
 
 
 @media (min-width: 800px) {
+	body { --left: 19.5em; }
 	#servers .more { display: none; }
 }
 @media (max-width: 800px) {
+	body { --left: 4.5em; }
 	#servers .more {
 		cursor: pointer;
 	}
@@ -428,13 +521,8 @@ body.controls-click .tmblr-iframe {
 	#servers .more.active svg {
 		transform: rotate(135deg);
 	}
-	body { grid-template-columns: auto 1fr; }
 	#sidebar {
 		transition: .3s;
-		width: 15em;
-		height: 100vh;
-		position: absolute;
-		left: 4.5em;
 		z-index: 9;
 	}
 	#sidebar:not(.active) { opacity: 0; pointer-events: none; }
