Added proper resets

--- a/discord-theme.css
+++ b/discord-theme.css
@@ -1,15 +1,51 @@
-/* Standard resets */
-html, body {
-	padding: 0;
+/*Resets*/
+/* http://meyerweb.com/eric/tools/css/reset/ 
+v2.0 | 20110126
+License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, cite,
+del, dfn, img, ins,
+tt, var, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
 	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
 	line-height: 1.2;
 }
-h1, h2, h3, h4, h5, h6, p {
-	padding: 0;
-	margin: 0;
-	font-weight: normal;
-	font-size: 1em;
+li {
+	margin: 0.5em 0 0.5em 1.5em;
 }
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+/* Actual styling */
 img { max-width: 100%; }
 *, *::after, *::before { box-sizing: border-box; }
 a { color: var(--link); text-decoration: none; }
