Reversed post-types/reblogs nesting

--- a/discord-theme.css
+++ b/discord-theme.css
@@ -500,9 +500,11 @@ body.light .post:hover, body.light .post:hover .timestamp .date { background: #f
 .post .bodyitem {
 	display: grid;
 	grid-template-columns: 2.5em 1fr;
+	grid-template-rows: auto 1fr;
 	column-gap: 1em;
 	margin: 1em 0 0.5em;
 }
+.bodyitem > img:first-child { grid-row: 1 / span 2 }
 .tag-wrapper { padding-bottom: 0.5em; margin-left: 3.5em; }
 .tag-wrapper .tag {
 	border: 1px solid transparent;
