--- a/discord-theme.css
+++ b/discord-theme.css
@@ -53,7 +53,7 @@ a:hover { text-decoration: underline; }
 body {
 	font-family: var(--font-normal);
 	font-size: {text:Font size};
-	background-color: var(--sidebar);
+	background-color: var(--bg-standard);
 	color: var(--text-normal);
 	overflow: hidden scroll;
 	--banner-header: {color:Title if header is showing};
@@ -405,6 +405,7 @@ body.light .tmblr-iframe {
 	align-items: center;
 }
 #navigate > div > p { color: var(--text-muted); }
+{block:IfNotInfiniteScroll}
 #navigate .paginate {
 	display: flex;
 	align-items: center;
@@ -430,13 +431,29 @@ body.light .tmblr-iframe {
 	content: "/";
 	margin: 0 0.25em;
 }
+{/block:IfNotInfiniteScroll}
+{block:IfInfiniteScroll}
+#navigate .paginate { display: none; }
+{block:IfManualLoadForInfiniteScroll}
+#iscroll {
+	display: block;
+	text-align: center;
+	background-color: var(--sidebar);
+	margin: -4em 1em 5.5em calc(var(--left) + 1em);
+	padding: 0.5em;
+	border-radius: 0.5em;
+	font-variant: small-caps;
+	cursor: pointer;
+	transition: .2s;
+}
+#iscroll:hover { background-color: var(--bg-dark); }
+{/block:IfManualLoadForInfiniteScroll}
+{/block:IfInfiniteScroll}
 .ask-submit-wrapper div:not(:empty) + iframe { margin-top: 1em; }
 
 #allposts {
 	padding: 0.25em 0 1em;
 	margin: 3em 0 4em var(--left);
-	background-color: var(--bg-standard);
-	max-width: {text:Post width};
 	min-height: calc(100vh - 7.25em);
 }
 #allposts > * { padding: 0.5em 1em 0.25em; margin: 0.5em 0; position: relative; }
