--- a/discord-theme.css
+++ b/discord-theme.css
@@ -398,7 +398,9 @@ body.light .tmblr-iframe {
 .ask-submit-wrapper ~ .post { display: none; }
 .post .content .tumblr_video_iframe, .post .content video { max-width: min(500px, 100%); margin: 0.25em 0 }
 .post .content video { max-height: 600px; width: auto; height: auto; }
-.post .content p { margin: 0.25em 0 0.5em; }
+.post .content > * { margin: 0.25em 0 0.5em; }
+.post .content h1 { font-size: 1.4em }
+.post .content h2 { font-size: 1.2em }
 body.dark .post:hover, body.dark .post:hover .timestamp .date { background: #32353b; }
 body.light .post:hover, body.light .post:hover .timestamp .date { background: #fafafa; }
 .timestamp {
